--- a/style.css
+++ b/style.css
@@ -58,3 +58,19 @@ form button:hover{
     justify-content: space-between;
     align-items: center;
 }
+.todo li{
+    flex:1;
+}
+.trash-btn, .complete-btn{
+    background: #ff6f47;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+}
+.complete-btn{
+    background:rgb(73, 204, 73) ;
+}
+.todo-item{
+    padding:0rem 0.5rem ;
+}
