--- a/style.css
+++ b/style.css
@@ -63,14 +63,20 @@ form button:hover{
     flex:1;
 }
 .trash-btn, .complete-btn{
-    background: #ff6f47;
-    color: white;
+    background: #ffff;
+    color: red;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     border: none;
     cursor: pointer;
     font-size: 1rem;
 }
 .complete-btn{
     background:rgb(73, 204, 73) ;
+    color: #ffff;
+    
 }
 .todo-item{
     padding:0rem 0.5rem ;
@@ -86,4 +92,39 @@ form button:hover{
 .fall{
     transform: translateY(8rem) rotateZ(20deg);
     opacity: 0;
+}
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline:none;
+    border: none;
+}
+.select {
+    margin: 1rem;
+    position:relative;
+    overflow: hidden;
+
+}
+
+select {
+    color: #ff6f47;
+    width: 10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+.select::after{
+    content:"\25BC";
+    position:absolute;
+    background: #ff6f47;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.select:hover::after{
+    background: white;
+    color: #ff6f47
 }
