--- a/style.css
+++ b/style.css
@@ -1,130 +1,139 @@
-*  {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    background-image: linear-gradient(120deg, #f6d365, #fda085);
-    color:white;
-    font-family: "poppins", sans-serif;
+  }
+  body {
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    color: white;
+    font-family: "Poppins", sans-serif;
     min-height: 100vh;
-}
-
-header {
-    font-size: 1.5rem;
-}
-
-header, form {
+  }
+  header {
+    font-size: 2rem;
+  }
+  
+  header,
+  form {
     min-height: 20vh;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-}
-
-form input, form button{
+  }
+  form input,
+  form button {
     padding: 0.5rem;
     font-size: 2rem;
     border: none;
     background: white;
-}
-
-form button{
-    color: #d88771;
-    background: white;
+  }
+  form button {
+    color: #ff6f47;
+    background: #f7fffe;
     cursor: pointer;
     transition: all 0.3s ease;
-}
-form button:hover{
-    background: #d88771;
+  }
+  form button:hover {
+    background: #ff6f47;
     color: white;
-}
-
-.todo-container {
+  }
+  .todo-container {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.todo-list {
+  }
+  
+  .todo-list {
     min-width: 30%;
     list-style: none;
-}
-.todo{
+  }
+  
+  .todo {
     margin: 0.5rem;
     background: white;
-    color: black;
     font-size: 1.5rem;
+    color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: all 0.5s ease;
-}
-.todo li{
-    flex:1;
-}
-.trash-btn, .complete-btn{
-    background: #ffff;
-    color: red;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    transition: all 1s ease;
+  }
+  .filter-todo {
+    padding: 1rem;
+  }
+  .todo li {
+    flex: 1;
+  }
+  
+  .trash-btn,
+  .complete-btn {
+    background: #ff6f47;
+    color: white;
     border: none;
+    padding: 1rem;
     cursor: pointer;
     font-size: 1rem;
-}
-.complete-btn{
-    background:rgb(73, 204, 73) ;
-    color: #ffff;
-    
-}
-.todo-item{
-    padding:0rem 0.5rem ;
-}
-.fa-trash,
-.fa-check{
+  }
+  .complete-btn {
+    background: rgb(11, 212, 162);
+  }
+  .todo-item {
+    padding: 0rem 0.5rem;
+  }
+  
+  .fa-trash,
+  .fa-check {
     pointer-events: none;
-}
-.completed{
+  }
+  
+  .fall {
+    transform: translateY(10rem) rotateZ(20deg);
+    opacity: 0;
+  }
+  
+  .completed {
     text-decoration: line-through;
     opacity: 0.5;
-}
-.fall{
-    transform: translateY(8rem) rotateZ(20deg);
-    opacity: 0;
-}
-select {
+  }
+  
+  /*CUSTOM SELECTOR */
+  select {
     -webkit-appearance: none;
     -moz-appearance: none;
+    -ms-appearance: none;
     appearance: none;
-    outline:none;
-    border: none;
-}
-.select {
+    outline: 0;
+    box-shadow: none;
+    border: 0 !important;
+    background-image: none;
+  }
+  
+  /* Custom Select */
+  .select {
     margin: 1rem;
-    position:relative;
+    position: relative;
     overflow: hidden;
-
-}
-
-select {
+  }
+  select {
     color: #ff6f47;
-    width: 10rem;
+    font-family: "Poppins", sans-serif;
     cursor: pointer;
-    padding: 1rem;
-}
-.select::after{
-    content:"\25BC";
-    position:absolute;
-    background: #ff6f47;
+    width: 12rem;
+  }
+  /* Arrow */
+  .select::after {
+    content: "\25BC";
+    position: absolute;
     top: 0;
     right: 0;
     padding: 1rem;
+    background: #ff6f47;
+    cursor: pointer;
     pointer-events: none;
-    transition: all 0.3s ease;
-}
-
-.select:hover::after{
-    background: white;
-    color: #ff6f47
-}
+  }
+  /* Transition */
+  /*
+  .select:hover::after {
+    transform: scale(1.5);
+  }
+  */
